added GD PHP extension as required

--- a/composer.json
+++ b/composer.json
@@ -9,6 +9,7 @@
     }
   ],
   "require": {
+    "ext-gd": "*",
     "composer/installers": "~1.0",
     "ponticlaro/bebop-cms": "dev-master",
     "ponticlaro/bebop-mvc": "dev-master",
