--- a/composer.json
+++ b/composer.json
@@ -18,7 +18,8 @@
     "respect/validation": "~0.9",
     "slim/slim": "~2",
     "league/flysystem": "~1",
-    "league/flysystem-aws-s3-v3": "~1",
+    "league/flysystem-aws-s3-v3": "^1",
+    "superbalist/flysystem-google-storage": "^3",
     "symfony/dom-crawler": "^2.7",
     "symfony/css-selector": "^2.7"
   },
