changed to superbalist/flysystem-google-storage v3.0.3

--- a/composer.json
+++ b/composer.json
@@ -6,10 +6,6 @@
     {
       "type": "vcs",
       "url": "git@github.com:ponticlaro/ponticlaro-aws.git"
-    },
-    {
-      "type": "vcs",
-      "url":  "https://github.com/cristianobaptista/flysystem-google-cloud-storage"
     }
   ],
   "require": {
@@ -24,7 +20,7 @@
     "slim/slim": "~2",
     "league/flysystem": "~1",
     "league/flysystem-aws-s3-v3": "^1",
-    "superbalist/flysystem-google-storage": "dev-master",
+    "superbalist/flysystem-google-storage": "^3",
     "symfony/dom-crawler": "^2.7",
     "symfony/css-selector": "^2.7"
   },
