--- a/composer.json
+++ b/composer.json
@@ -45,10 +45,15 @@
       "Ponticlaro\\Bebop\\Media\\": "lib/"
     }
   },
-  "scripts": {
-    "generate-docs": "apigen generate --config ./apigen.yaml"
-  },
   "suggest": {
     "ponticlaro/aws-transcoder": "Allows usage of AWS Elastic Transcoder to optimize video uploads"
+  },
+  "scripts": {
+    "generate-docs": "apigen generate --config ./.apigen.yaml"
+  },
+  "support": {
+    "email": "hello@ponticlaro.com",
+    "issues": "https://github.com/ponticlaro/bebop-media/issues",
+    "forum": "https://gitter.im/ponticlaro/bebop"
   }
 }
