updated to latest maintenance releases

--- a/composer.json
+++ b/composer.json
@@ -25,7 +25,7 @@
     "ponticlaro/bebop-scripts-loader": "^1",
     "respect/validation": "~0.9",
     "slim/slim": "~2",
-    "league/flysystem": "~1",
+    "league/flysystem": "^1",
     "league/flysystem-aws-s3-v3": "^1",
     "superbalist/flysystem-google-storage": "^7",
     "symfony/dom-crawler": "^2.7",
